spring-boot-starter-test conflicts with json library

--- a/src/main/resources/locale/messages_ru.properties
+++ b/src/main/resources/locale/messages_ru.properties
@@ -1,1 +1,1 @@
-exception.users.duplicate_email=Ошибка!<br/>Пользователь с такой почтой уже есть в приложении!
+exception.users.duplicate_email=РћС€РёР±РєР°!<br/>РџРѕР»СЊР·РѕРІР°С‚РµР»СЊ СЃ С‚Р°РєРѕР№ РїРѕС‡С‚РѕР№ СѓР¶Рµ РµСЃС‚СЊ РІ РїСЂРёР»РѕР¶РµРЅРёРё!
