companies HTML added

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -1,1 +1,2 @@
 exception.users.duplicate_email=Error!<br/>User with this email already present in application!
+user.save=\ User successfully saved
