--- a/src/main/resources/locale/messages_ru.properties
+++ b/src/main/resources/locale/messages_ru.properties
@@ -1,1 +1,2 @@
 exception.users.duplicate_email=Ошибка!<br/>Пользователь с такой почтой уже есть в приложении!
+user.save=Пользователь успешно сохранен
