--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -1,2 +1,3 @@
+exception.company.duplicate_name_email=Error!<br/>Company with such name and email already present in application!
 exception.users.duplicate_email=Error!<br/>User with this email already present in application!
 user.save=\ User successfully saved
