--- a/src/main/resources/locale/messages_ru.properties
+++ b/src/main/resources/locale/messages_ru.properties
@@ -1,3 +1,4 @@
+access.denied.exception=Ошибка!<br/>Данное действие запрещено
 exception.company.duplicate_name_email=Ошибка!<br/>Компания с таким названием и email уже есть в приложении!
 exception.users.duplicate_email=Ошибка!<br/>Пользователь с такой почтой уже есть в приложении!
 user.save=Пользователь успешно сохранен
