--- a/src/main/resources/locale/messages_ru.properties
+++ b/src/main/resources/locale/messages_ru.properties
@@ -14,7 +14,27 @@ tab.reports=Отчеты
 company.name=Название
 company.email=Почта
 company.address=Адрес
-order.name=Название
-order.date=Дата
-order.data=Содержание
+report.name=Название
+report.date=Дата/время
+report.data=Содержание
 user.logged=Вы авторизовались как:
+header.menu=Меню
+new.user=Добавить пользователя
+new.company=Добавить компанию
+new.report=Добавить отчет
+log.out=Выход
+button.save=Сохранить
+button.cancel=Отмена
+hint.min5chars=Минимум 5 символов
+hint.min3chars=Минимум 3 символа
+hint.email=***Введите корректный email
+company.modaltitle=Добавить/редакт. компанию
+user.modaltitle=Добавить/редакт. пользователя
+user.password=Пароль
+user.confirm.password=Подтвердите пароль
+hint.password=Пароль должен содержать 5-15 символов
+hint.password.mismatch=***Упс.. не совпадает
+hint.phone=Формат: + затем 7-15 цифр
+report.modaltitle=Добавить/редакт. отчет
+exception.validation=Возникла ошибка валидации
+exception.db=Возникла ошибка базы данных
