--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -14,7 +14,27 @@ tab.reports=Reports
 company.name=Name
 company.email=Email
 company.address=Address
-order.name=Name
-order.date=Date
-order.data=Content
-user.logged=You logged as:  
+report.name=Name
+report.date=Date/time
+report.data=Content
+user.logged=You logged as:
+header.menu=Menu
+new.user=Add user
+new.company=Add company
+new.report=Add report
+log.out=Log out
+button.save=Save
+button.cancel=Cancel
+hint.min3chars=Minimum of 3 characters
+hint.min5chars=Minimum of 5 characters
+hint.email=***Please provide a valid Email
+company.modaltitle=Add/edit company
+user.modaltitle=Add/edit user
+user.password=Password
+user.confirm.password=Confirm password
+hint.password=Password must have 5-15 characters
+hint.password.mismatch=***Whoops, these don't match
+hint.phone=Format: + than 7-15 digits
+report.modaltitle=Add/edit report
+exception.validation=Validation exception has been occurred
+exception.db=Database error has been occurred
