frontend and backend have done

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -38,3 +38,9 @@ hint.phone=Format: + than 7-15 digits
 report.modaltitle=Add/edit report
 exception.validation=Validation exception has been occurred
 exception.db=Database error has been occurred
+common.saved=An item successfully saved
+common.deleted=An item successfully deleted
+common.cancel=Cancel
+company.select=Select a company:
+common.delete=Delete
+common.captiondlg=Attention!
