--- a/src/main/resources/locale/messages_ru.properties
+++ b/src/main/resources/locale/messages_ru.properties
@@ -38,3 +38,9 @@ hint.phone=Формат: + затем 7-15 цифр
 report.modaltitle=Добавить/редакт. отчет
 exception.validation=Возникла ошибка валидации
 exception.db=Возникла ошибка базы данных
+common.saved=Элемент записан успешно 
+common.deleted=Элемент удален
+common.cancel=Отмена
+company.select=Выберите компанию:
+common.delete=Удалить
+common.captiondlg=Внимание!
