frontend and backend have done

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -43,4 +43,4 @@ common.deleted=An item successfully deleted
 common.cancel=Cancel
 company.select=Select a company:
 common.delete=Delete
-common.captiondlg=Attention!
+common.caption=Attention!
