--- a/src/main/resources/locale/messages_ru.properties
+++ b/src/main/resources/locale/messages_ru.properties
@@ -43,4 +43,4 @@ common.deleted=Элемент удален
 common.cancel=Отмена
 company.select=Выберите компанию:
 common.delete=Удалить
-common.captiondlg=Внимание!
+common.caption=Внимание!
